--- a/TFT_volatility_hm.ipynb
+++ b/TFT_volatility_hm.ipynb
@@ -6,6 +6,7 @@
       "name": "TFT_volatility",
       "provenance": [],
       "collapsed_sections": [],
+	  "include_colab_link": true,
       "machine_shape": "hm"
     },
     "kernelspec": {
